--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,6 @@ rvm:
   - 1.9
 
 env:
-  - RAILS=master AREL=master DB=sqlite
-  - RAILS=master AREL=master DB=mysql
-  - RAILS=master AREL=master DB=postgres
-
   - RAILS=4-2-stable AREL=6-0-stable DB=sqlite
   - RAILS=4-2-stable AREL=6-0-stable DB=mysql
   - RAILS=4-2-stable AREL=6-0-stable DB=postgres
@@ -39,6 +35,15 @@ env:
   - RAILS=3-0-stable AREL=2-0-stable DB=sqlite
   - RAILS=3-0-stable AREL=2-0-stable DB=mysql
   - RAILS=3-0-stable AREL=2-0-stable DB=postgres
+
+matrix:
+  include:
+    - rvm: 2.2
+      env: RAILS=master DB=sqlite3
+    - rvm: 2.2
+      env: RAILS=master DB=mysql
+    - rvm: 2.2
+      env: RAILS=master DB=postgres
 
 before_script:
   - mysql -e 'create database ransack collate utf8_general_ci;'
