--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,10 @@ matrix:
       env: RAILS=master DB=mysql
     - rvm: 2.2
       env: RAILS=master DB=postgres
+  allow_failures:
+    - env: RAILS=master DB=sqlite3
+    - env: RAILS=master DB=mysql
+    - env: RAILS=master DB=postgres
 
 before_script:
   - mysql -e 'create database ransack collate utf8_general_ci;'
