--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,20 @@ matrix:
     - rvm: 2.2.5
       env: RAILS=master DB=postgres
 
+    - rvm: 2.3.1
+      env: RAILS=5-0-stable DB=sqlite3
+    - rvm: 2.3.1
+      env: RAILS=5-0-stable DB=mysql
+    - rvm: 2.3.1
+      env: RAILS=5-0-stable DB=postgres
+
+    - rvm: 2.2.5
+      env: RAILS=5-0-stable DB=sqlite3
+    - rvm: 2.2.5
+      env: RAILS=5-0-stable DB=mysql
+    - rvm: 2.2.5
+      env: RAILS=5-0-stable DB=postgres
+
   allow_failures:
     - env: RAILS=master DB=sqlite3
     - env: RAILS=master DB=mysql
