--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ before_install:
   - travis_retry gem install bundler
 
 rvm:
-  - 2.4.2
-  - 2.3.5
-  - 2.2.8
+  - 2.5.0
+  - 2.4.3
+  - 2.3.6
+  - 2.2.9
 
 env:
   - RAILS=4-2-stable AREL=6-0-stable DB=sqlite
@@ -24,25 +25,32 @@ env:
 
 matrix:
   include:
-    - rvm: 2.4.2
+    - rvm: 2.5.0
       env: RAILS=master DB=sqlite3
-    - rvm: 2.4.2
+    - rvm: 2.5.0
       env: RAILS=master DB=mysql
-    - rvm: 2.4.2
+    - rvm: 2.5.0
       env: RAILS=master DB=postgres
 
-    - rvm: 2.3.5
+    - rvm: 2.4.3
       env: RAILS=master DB=sqlite3
-    - rvm: 2.3.5
+    - rvm: 2.4.3
       env: RAILS=master DB=mysql
-    - rvm: 2.3.5
+    - rvm: 2.4.3
       env: RAILS=master DB=postgres
 
-    - rvm: 2.2.8
+    - rvm: 2.3.6
       env: RAILS=master DB=sqlite3
-    - rvm: 2.2.8
+    - rvm: 2.3.6
       env: RAILS=master DB=mysql
-    - rvm: 2.2.8
+    - rvm: 2.3.6
+      env: RAILS=master DB=postgres
+
+    - rvm: 2.2.9
+      env: RAILS=master DB=sqlite3
+    - rvm: 2.2.9
+      env: RAILS=master DB=mysql
+    - rvm: 2.2.9
       env: RAILS=master DB=postgres
 
 before_script:
